# tinytools

./: Cargo.toml  README.md  default.nix  flake.nix
.github/workflows/: release.yml
src/: main.rs
src/modules/: _shared_functions.rs  bak.rs  debak.rs  gr.rs  mod.rs
